# lex-vault

./: .gitignore  README.md
client/lex-vault/: .env.development.local  README.md  build.ps1  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
client/lex-vault/src-tauri/: Cargo.toml  tauri.conf.json
client/lex-vault/src-tauri/capabilities/: default.json
client/lex-vault/src-tauri/icons/: icon.icns
client/lex-vault/src-tauri/resources/model_instructions/: kongweiguang.md
client/lex-vault/src-tauri/resources/websearch/: search-helper.cjs
client/lex-vault/src-tauri/resources/wechat/: login-helper.mjs
client/lex-vault/src-tauri/src/: app.rs  appserver_client.rs  codex_process.rs  commands.rs  conversation_trace.rs  jsonrpc.rs  knowledge_runtime.rs  lib.rs  local_mcp_server.rs  logging.rs  main.rs  multimodal_understanding_runtime.rs  notification_center.rs  runtime_bundle.rs  tray.rs  update_manager.rs  websearch_runtime.rs  wechat_gateway_auth.rs
client/lex-vault/src-tauri/src/appserver_client/: client.rs  model_config.rs  params.rs  protocol.rs
client/lex-vault/src-tauri/src/commands/: file_manager.rs  local_data.rs  wechat.rs
client/lex-vault/src-tauri/src/commands/codex/: command_handlers.rs  mod.rs  models.rs  runtime_support.rs
client/lex-vault/src-tauri/src/commands/local_data/: auth.rs  billing.rs  calendar.rs  config.rs  path.rs  store.rs
client/lex-vault/src-tauri/src/event_normalizer/: helpers.rs  mod.rs  models.rs  normalize.rs
client/lex-vault/src-tauri/src/tests/: appserver_client_tests.rs  codex_process_tests.rs  commands_codex_tests.rs  commands_file_manager_tests.rs  commands_local_data_tests.rs  commands_wechat_tests.rs  event_normalizer_tests.rs  knowledge_runtime_tests.rs  multimodal_understanding_runtime_tests.rs  runtime_bundle_tests.rs  update_manager_tests.rs  websearch_runtime_tests.rs  wechat_gateway_auth_tests.rs
client/lex-vault/src-tauri/src/window/: bounds.rs  icon_draw.rs  mod.rs  platform.rs  sidebar.rs  theme.rs
client/lex-vault/src-tauri/tests/: wechat-login-helper.test.mjs
server/: .gitkeep
(+192 files in other folders)
