[package]
name = "lex-vault"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lex_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
tokio = { version = "1", features = ["io-util", "net", "process", "sync", "time"] }
tokio-util = "0.7"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
path-clean = "1.0.1"
walkdir = "2.5.0"
dirs = "6.0.0"
sanitize-filename = "0.6.0"
base64 = "0.22.1"
open = "5.3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
toml_edit = "0.23.4"
dotenvy = "0.15.7"
axum = "0.8"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
once_cell = "1.21.3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"


